--- a/resources/CSS/styles.css
+++ b/resources/CSS/styles.css
@@ -7,3 +7,40 @@ html {
     font-family: 'Noto Sans', sans-serif;
     scroll-behavior: smooth;
 }
+
+html,
+body {
+  height: 100%;
+  color: var(--font-color);
+}
+
+body {
+    font-family: "Open Sans", sans-serif;
+    margin: 0;
+    padding: 0 var(--spacing-3);
+    max-width: 900px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+/*header*/
+
+nav {
+    display: flex;
+    align-items: center;
+    padding: var(--spacing-3) 0;
+}
+  
+.navigation-items {
+    display: flex;
+    list-style-type: none;
+    padding: 0;
+    align-items: center;
+    margin: 0;
+    margin-left: auto;
+}
+  
+.navigation-item {
+    margin: var(--spacing-1);
+}
