adding the projects section to the index html file and styles css file

--- a/resources/CSS/styles.css
+++ b/resources/CSS/styles.css
@@ -63,3 +63,9 @@ nav {
 .about-me-text-container {
     margin-right: var(--spacing-3);
 }
+
+/*Project section*/
+
+.project a:hover {
+    color: blue;
+}
