--- a/resources/CSS/styles.css
+++ b/resources/CSS/styles.css
@@ -15,13 +15,19 @@ body {
 }
 
 body {
-    font-family: "Open Sans", sans-serif;
+    font-family: "Noto Sans", sans-serif;
     margin: 0;
     padding: 0 var(--spacing-3);
     max-width: 900px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
+}
+
+h1, h2 {
+    font-family: "Noto Sans", sans-serif;
+    margin: 0;
+    margin-bottom: var(--spacing-2);
 }
 
 section {
@@ -100,4 +106,10 @@ footer {
     margin-top: auto;
     padding: var(--spacing-2) 0;
     text-align: center;
+}
+
+@media only screen and (max-width: 600px) {
+    .about-me-container {
+      flex-direction: column;
+    }
 }
